Fix z-index #2

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 .header-container {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   width: 100%;
   color: #83888f;
